two step docker build

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,33 @@
-FROM golang:1.19-alpine
+# STEP 1 build executable binary
 
-RUN mkdir /app
+FROM golang:1.19-alpine AS builder
 
-ADD . /app
+# install git (required for fetching the dependencies)
+RUN apk update && apk add --no-cache git
+WORKDIR $GOPATH/src/mypackage/myapp/
+COPY . .
 
-# static web site
-# TODO
+RUN mkdir app
 
-WORKDIR /app
+# fetch dependencies
+RUN go get -d -v
 
-RUN go build -o server main.go
+# build the binary.
+RUN go build -o /app/server
 
-CMD ["/app/server"]
+# copy static content
+RUN cp -r webjs /app/
+#ENTRYPOINT ["/bin/sh"]
+
+# STEP 2 build a small image
+
+FROM scratch
+
+# copy our static executable.
+COPY --from=builder /app/server /app/server
+
+#COPY --from=builder /app/webjs /app/
+
+#WORKDIR /app
+
+ENTRYPOINT ["/app/server"]
